fixed overflow

--- a/style.css
+++ b/style.css
@@ -5,13 +5,13 @@ body {
 
     position: relative;
 
+    overflow: hidden;
+
     min-height: 100vh;
     margin:0;
 }
 
 h1 {
-    color: none;
-
     font-family: Arial, "Kode mono", serif;
     font-size: 10rem;
     text-align: center;
@@ -23,7 +23,7 @@ h1 {
     align-items: center;
 
     height: 100vh;
-    margin-top: 0;
+    margin: 0;
 }
 
 .hidden {
